--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -32,7 +32,7 @@
                     {% for photo in images %}
                     <div {% if photo == first_photo %} class="carousel-item active" {% else %} class="carousel-item" {% endif %}
                             style="">
-                        <img class="d-block w-100" src="{{ photo.image_path }}" alt="{{ photo.filename }}"  style="">
+                        <img class="d-block w-100" src="{{ url_for('static', filename=photo) }}"  style="">
                         <div class="carousel-caption">
                             <div class="container-md">
                                 <div class="row justify-content-center">
@@ -74,6 +74,19 @@
                     <p class="text-lg">{{ form.sort_by.label }}</p>
                     <p class="text-lg">{{ form.sort_by(onchange="this.form.submit();") }}</p>
                 </div>
+
+                {% if session.logged_in %}
+                <div class="col-md-auto" style="margin-bottom: 20px;">
+                    <div class="row justify-content-center text-center">
+                        <div class="col-md">
+                            <a href="{{ url_for('blueprint.view_project', project_id=1 ) }}">
+                                <p class="text-center font-med-bold">Edit Slideshow</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
+
                 <div class="col-md-3" style="text-align: center; padding: 0px 20px;">
                     <p class="text-lg">{{ form.filter_by.label }}</p>
                     <p class="text-lg">{{ form.filter_by(onchange="this.form.submit();") }}</p>
