--- a/flaskr/templates/view_project.html
+++ b/flaskr/templates/view_project.html
@@ -54,6 +54,34 @@
 </div>
 
 
+{% if session.logged_in %}
+{% from "includes/_formhelpers.html" import render_field %}
+<div class="container-md" style="margin-bottom: 20px;">
+    <div class="row align-items-end justify-content-center">
+        <div class="col-md text-md admin-forms font-med-bold text-center" style="margin-top: 10px;">
+            <h1 class="display-6">Upload Images</h1>
+        </div>
+    </div>
+
+    <form method="post" action="" class="" enctype="multipart/form-data">
+        <div class="row justify-content-center text-md" style="font-weight: 500;">
+            <div class="col-md-5 form-labels">
+                    {{ image_form.image(class="form-control", style="", multiple="multiple") }}
+            </div>
+        </div>
+        <div class="row justify-content-center text-center">
+            <div class="col-md">
+                <button class="buttons btn btn-outline-primary"
+                    data-callback='onSubmit'
+                    data-action='submit'
+                    name="upload-image">Upload</button>
+            </div>
+        </div>
+    </form>
+</div>
+{% endif %}
+
+
 
     <!-- images from static/uploads -->
 <div class="container-md image-container" style="clear:both;">
@@ -61,13 +89,20 @@
         {% for photo in photos %}
         <div class="col-md-4 text-center">
             <div>
-                <div>
-                    <a href="{{ url_for('blueprint.view_image', image_id=photo.image_id) }}">
-                        <img class="img-thumbnail" src="{{photo.image_path}}" alt="photo.filename">
-                    </a>
-                </div>
+                <a href="{{ url_for('blueprint.view_image', image_id=photo.image_id) }}">
+                    <img class="img-thumbnail" src="{{photo.image_path}}" alt="photo.filename">
+                </a>
             </div>
             {% if session.logged_in %}
+            <form method="post" action="">
+                <div class="form-check" style="margin-left: 30px;">
+                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                      <label class="form-check-label" for="flexCheckDefault">
+                        Add to Gallery slideshow
+                      </label>
+                </div>
+            </form>
+
             <div class="btn btn-default">
               <form action="{{ url_for('blueprint.delete_image', image_id=photo.image_id, project_id=photo.project_id, filename=photo.filename) }}" method="post">
                   <input type="submit" value="Delete" name="delete-button" onclick="return confirm('Are you sure you want to delete this image?');" class="btn btn-danger">
